--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="bgColor">#F5F5F7</color>
     <color name="textColor">#1D2126</color>
+    <color name="actionBarText">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
 </resources>
