--- a/app/src/main/res/layout/content_new_order.xml
+++ b/app/src/main/res/layout/content_new_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.AvailableOrdersActivity"
-    tools:showIn="@layout/activity_available_orders">
+    tools:context=".ui.NewOrderActivity"
+    tools:showIn="@layout/activity_new_order">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
