--- a/app/src/main/res/layout/activity_record_order.xml
+++ b/app/src/main/res/layout/activity_record_order.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.NewOrderActivity"
-    tools:showIn="@layout/activity_new_order">
+    tools:context=".ui.RecordOrderActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
