--- a/app/src/main/res/layout/activity_record_order.xml
+++ b/app/src/main/res/layout/activity_record_order.xml
@@ -6,4 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.RecordOrderActivity">
 
+    <include layout="@layout/recycler_view" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
